Format currency displayed on forms

--- a/templates/default/stripe_form_checkout.html.twig
+++ b/templates/default/stripe_form_checkout.html.twig
@@ -25,7 +25,8 @@
         <div class="ui segment">
             <div class="ui inverted secondary big segment">
                 <div class="ui large center aligned header">
-                    {{ amount / 100.0 }} {{ stripe.getCurrency() }}
+                    {% set charge = amount / 100.0 %}
+                    {{ charge|format_currency(stripe.getCurrency(), locale: galette_lang) }}
                     <div class="sub header">{{ item_name }}</div>
                 </div>
             </div>
