--- a/templates/default/stripe_preferences.html.twig
+++ b/templates/default/stripe_preferences.html.twig
@@ -90,12 +90,15 @@
                         } %}
                     {% endif %}
                 {% endif %}
-                {% if stripe.areAmountsLoaded() and amounts|length > 0 %}
+                {% if stripe.isLoaded() and amounts|length > 0 %}
                     <table class="listing ui celled striped table">
                         <thead>
                             <tr>
                                 <th class="listing">{{ _T("Contribution type") }}</th>
-                                <th class="listing">{{ _T("Amount") }}</th>
+                                <th class="listing collapsing">
+                                    {{ _T("Amount") }}
+                                    <i class="circular small basic question icon tooltip" aria-hidden="true" title="{{ _T("Amounts can be defined in the contribution types configuration", "stripe") }}"></i>
+                                </th>
                                 <th class="listing collapsing">{{ _T("Inactive") }}</th>
                             </tr>
                         </thead>
@@ -106,8 +109,8 @@
                                         <input type="hidden" name="amount_id[]" id="amount_id_{{ k }}" value="{{ k }}"/>
                                         <label for="amount_{{ k }}">{{ amount['name'] }}</label>
                                     </td>
-                                    <td>
-                                        <input type="text" name="amounts[]" id="amount_{{ k }}" value="{{ amount['amount'] }}"/>
+                                    <td class="collapsing">
+                                        {{ amount['amount'] }}
                                     </td>
                                     <td class="collapsing">
                                          <div class="ui right aligned toggle checkbox">
